# jitcalc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: JITcompiler.hpp  arena.h  arena.hpp  arenaAllocator.hpp  defines.hpp  displayPoints.hpp  eval.hpp  executableMemory.hpp  graphMain.hpp  lexer.hpp  mainGui.hpp  parser.hpp  platformInput.h  tools.hpp  vboAllocator.hpp
old/: arena.cpp  arena.h
resources/: icon.aps  icon.h  icon.raw  icon.res
src/: JITcompiler.cpp  arena.cpp  eval.cpp  executableMemory.cpp  lexer.cpp  main.cpp  parser.cpp
src/core/: arena.cpp  arenaAllocator.cpp  tools.cpp
src/expr/: JITcompiler.cpp  eval.cpp  lexer.cpp  parser.cpp
src/gui/: displayPoints.cpp  graphMain.cpp  mainGui.cpp  vboAllocator.cpp
src/gui/platform/: mainGui.cpp  opterPlatformFunctions.cpp  platformInput.cpp
